@startuml DesignModel_Reportes_DiagramaObjetos
' Diagrama de Objetos de Diseño - Módulo Gestión de Reportes
' Análisis riguroso del código - Patrón MVC
' Arquitectura de 3 capas: Boundary → Controller → Model
' Estilo curvilíneo con etiquetas descriptivas
' Orden estricto: Boundary → Controller → Model

skinparam linetype polyline
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}
skinparam classAttributeIconSize 0
skinparam roundcorner 20

' ==========================================
' ACTOR
' ==========================================
class "analista\n(from Actors)" as actorAnalista <<actor>>

' ==========================================
' CAPA DE PRESENTACIÓN (BOUNDARY)
' Orden: Boundary primero
' ==========================================
class "menu\n(from shared)" as menu <<boundary>> {
    ' Muestra enlace "Gestión de Reportes" para admin y analista
}

class "formulario\n(from shared)" as formulario <<boundary>> {
    {protected} cabeceraShow() : void
    {protected} menuShow() : void
    {protected} piePaginaShow() : void
}

class "formReportes" as formReportes <<boundary>> {
    +formListarReportesShow($movimientos : array, $kardex : array) : void
    +formReporteEntradaShow($entradas : array, $fechaInicio : string, $fechaFin : string, $pagina : int, $totalPaginas : int, $totalRegistros : int, $buscar : string) : void
    +formReporteSalidaShow($salidas : array, $fechaInicio : string, $fechaFin : string, $pagina : int, $totalPaginas : int, $totalRegistros : int, $buscar : string) : void
    {private} formatearFecha($fecha : string) : string
    {private} formatearFechaHora($fechaHora : string) : string
}

class "pantallaMensajeSistema\n(from shared)" as msgSistema <<boundary>> {
    +mensajeSistemaShow($tipo : int, $mensaje : string, $enlace : string) : void
}

' ==========================================
' CAPA DE CONTROL (CONTROLLER)
' Orden: Controller segundo
' ==========================================
class "getReportes\n(script dispatcher)" as getReportes <<controller>> {
    ' Script que recibe URLs (GET/POST)
    ' Maneja parámetros: op, buscar, paginaEntrada, paginaSalida
    ' Valida botones POST: btnIrEntrada, btnIrSalida, btnGenerarEntrada, btnGenerarSalida
}

class "reporteController" as ctrlReporte <<controller>> {
    +__construct() : void
    +gestionar($buscar : string) : void
    +mostrarEntrada($fechaInicio : string, $fechaFin : string, $pagina : int, $buscar : string) : void
    +mostrarSalida($fechaInicio : string, $fechaFin : string, $pagina : int, $buscar : string) : void
}

' ==========================================
' CAPA DE ACCESO A DATOS (ENTITY)
' Orden: Model tercero
' ==========================================
class "session\n(from core)" as session <<entity>> {
    {static} start() : void
    {static} set($key : string, $value : mixed) : void
    {static} get($key : string) : mixed
    {static} exists($key : string) : bool
    {static} remove($key : string) : void
    {static} destroy() : void
    {static} verificarSesion() : void
    {static} rol() : string
    {static} esAdmin() : bool
    {static} esAuxiliar() : bool
    {static} esAnalista() : bool
}

class "conexion\n(from config)" as conexion <<entity>> {
    {protected} $db : PDO
    +conectar() : void
    +desconectar() : void
}

class "movimiento\n(from core)" as movimiento <<entity>> {
    +obtenerTodos() : array
    +obtenerFiltrados($buscar : string) : array
    +obtenerKardex($producto_id : int, $fechaInicio : string, $fechaFin : string) : array
    +obtenerPorTipo($tipo : string, $fechaInicio : string, $fechaFin : string) : array
    +obtenerPorTipoPaginado($tipo : string, $fechaInicio : string, $fechaFin : string, $pagina : int, $porPagina : int) : array
    +contarPorTipo($tipo : string, $fechaInicio : string, $fechaFin : string) : int
    +obtenerFiltradosReporte($buscar : string) : array
    +obtenerPorTipoOrdenado($tipo : string, $orden : string, $buscar : string) : array
    +registrar($lote_id : int, $tipo : string, $cantidad : int, $motivo : string, $usuario_id : int) : bool
}

' ==========================================
' EXTERNAL (Base de Datos)
' ==========================================
class "MySQL\n(database)" as mysql <<external>> {
    + query() : ResultSet
    + execute() : bool
    + connect() : void
    + disconnect() : void
}

' ==========================================
' RELACIONES - ORDEN: BOUNDARY → CONTROLLER → MODEL
' Estilo curvilíneo con etiquetas descriptivas
' ==========================================

' Actor accede al sistema
actorAnalista --> menu : "accede"

' BOUNDARY → BOUNDARY (herencia)
formulario <|-- formReportes : "hereda"
formulario <|-- msgSistema : "hereda"

' BOUNDARY → CONTROLLER
menu --> getReportes : "navega a\n(GET ?op=listar)"
formReportes --> getReportes : "envía petición\n(POST/GET)"

' CONTROLLER → CONTROLLER
getReportes --> ctrlReporte : "instancia"

' CONTROLLER → BOUNDARY
getReportes --> formReportes : "redirige a"
ctrlReporte --> formReportes : "renderiza"
ctrlReporte --> msgSistema : "muestra error"

' CONTROLLER → MODEL
ctrlReporte --> session : "valida sesión"
ctrlReporte --> movimiento : "consulta datos"

' MODEL → MODEL (herencia)
conexion <|-- movimiento : "hereda"

' MODEL → MODEL (uso)
movimiento --> conexion : "usa"

' MODEL → EXTERNAL
conexion --> mysql : "conecta a"

' ==========================================
' NOTAS EXPLICATIVAS
' ==========================================
note right of formReportes
    **Capa de Presentación (Boundary)**
    - Muestra y captura información
    - Hereda de formulario para estructura común
    - No accede directamente a base de datos
    - Renderiza vistas HTML
end note

note right of ctrlReporte
    **Capa de Control (Controller)**
    - Coordina el flujo del proceso
    - Valida datos y sesiones
    - Decide qué vista mostrar
    - Orquesta interacciones con Entity
    - No accede directamente a base de datos
end note

note right of movimiento
    **Capa de Acceso a Datos (Entity)**
    - Interactúa con base de datos
    - Hereda de Conexion
    - Ejecuta consultas SQL
    - No muestra información al usuario
    - Retorna datos al Controller
end note

note right of mysql
    **Base de Datos Externa**
    - Almacena información persistente
    - Ejecuta consultas SQL
    - Retorna resultados de consultas
end note

@enduml
